# sparkle

./: .gitignore  AGENTS.md  API.md  CLI.md  CLI_USAGE.md  Cargo.toml  LICENSE  README.md  crates.js  help.html  settings.html  src-files.js
.github/workflows/: docs.yml
docs/: STEALTH.md  STORAGE_STATE.md
examples/: basic_navigation.rs  cdp_connection.rs  cdp_session_example.rs  cloudflare_iframe_test.rs  device_emulation.rs  frame_error_test.rs  frame_locator_test.rs  frame_selector_quotes_test.rs  launch_options_demo.rs  locator_demo.rs  mouse_emulation_test.rs  nth_locator_test.rs  remote_connection.rs  stealth_comprehensive.rs  stealth_test.rs  storage_state.rs  test_executable_path.rs  test_logging.rs  wait_for_load_state_test.rs  wikipedia_search.rs
search.index/: 02735a43f0aa.js  0822ef20569a.js  087c7c9d59bd.js  0bb0c25da823.js  0dfc50601c11.js  0e37da50055b.js  0fa04ee57413.js  15e91a8f6894.js  18aa8f9e3fd0.js  1c638b745b03.js  1d25ab516986.js  1f7e9c7bf1ff.js  26b710e46019.js  27f4d90d9f05.js  2853ee437c31.js  2a4417ceaaa1.js  31cfd4cb7e81.js  34e5b475b9b4.js  358b3db2db12.js  37a570418405.js  37a5c43aaab8.js  37b8006495b4.js  3e8ef33c9041.js  3ec1865dbe63.js  3ef9eb9288e9.js  3f720d7d2259.js  455cc40c3161.js  46ee70b59fa5.js  4709fc0319c0.js  474b779d665c.js  48f852418569.js  4adc6e312fc5.js  4be1c2d39fc2.js  4d621fb8b590.js  5ae2d217ad1a.js  5f5c1d9e8cf9.js  60e787fef7c6.js  62db38281b05.js  630d2b3fb89f.js  634c38ea4344.js  (+15 more)
search.index/crateNames/: 21f8abf32f27.js
search.index/desc/: e3330726649b.js
search.index/entry/: 6fd34bd18d3a.js
search.index/function/: 00dd6834e46c.js
search.index/generic_inverted_index/: a38ad6eeb491.js
search.index/name/: cd066080fdcb.js
search.index/normalizedName/: 4d44a8b8ef5d.js
search.index/path/: 10ffedf93d89.js
search.index/type/: d2034d41d935.js
sparkle/: all.html  index.html  sidebar-items.js
sparkle/async_api/: index.html  sidebar-items.js
sparkle/cli/: index.html  sidebar-items.js
src/: lib.rs
src/cli/: mod.rs  (+5 more)
(+140 files in other folders)
