[package]
name = "sparkle"
version = "0.1.0"
edition = "2021"
authors = ["Nguyễn Thế Hưng <contact@tretrauit.me>"]
description = "A Playwright implementation in Rust, powered by thirtyfour"
license = "Apache-2.0"
repository = "https://github.com/tretrauit/sparkle"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# WebDriver integration
thirtyfour = "0.36"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
derive_builder = "0.20"
url = "2.5"
regex = "1.10"
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14"
