[package]
name = "sparkle"
version = "0.1.0"
edition = "2021"
authors = ["Nguyễn Thế Hưng <contact@tretrauit.me>"]
description = "A Playwright implementation in Rust, powered by thirtyfour"
license = "Apache-2.0"
repository = "https://github.com/tretrauit/sparkle"

[[bin]]
name = "sparkle"
path = "src/bin/sparkle.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# WebDriver integration
thirtyfour = "0.36"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
derive_builder = "0.20"
url = "2.5"
regex = "1.10"
chrono = "0.4"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "color"] }
reqwest = { version = "0.13", features = ["stream", "json"] }
indicatif = "0.18"
tokio-util = { version = "0.7", features = ["compat"] }
flate2 = "1.0"
tar = "0.4"
zip = "7.2"
directories = "6.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14"
